--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "zod": "^3.23.8"
   },
