--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
+    "idb": "^8.0.1",
+    "libphonenumber-js": "^1.11.17",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
     "react": "^18.3.1",
