--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
     "react": "^18.3.1",
+    "react-confetti": "^6.2.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "react-use": "^17.6.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
