--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns-tz": "^3.2.0",
     "idb": "^8.0.1",
     "libphonenumber-js": "^1.11.17",
+    "luxon": "^3.5.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
     "react": "^18.3.1",
@@ -29,10 +30,12 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-use": "^17.6.0",
+    "socket.io-client": "^4.8.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/luxon": "^3.4.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
