--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-VITE_API_URL=http://localhost:8000/api/v1
-
+VITE_MODE=development
+VITE_API_URL=http://localhost:8000
 VITE_DB_NAME=vamos_expeditions
 VITE_DB_VERSION=1
