feat: Enhance UserInfo component with online status badge
feat: Update StatisticsSummaryGraph to adjust skeleton width based on window size

refactor: Simplify MainLayout sidebar visibility logic

fix: Add missing line break in NewQuotePage component

fix: Update HotelsDetailsSummary to display correct cost

fix: Modify HotelContent to calculate cost per person correctly

fix: Update HotelListDetails to show cost per person instead of hotel rate

fix: Adjust TripDetailsForm to handle clientId default value correctly

fix: Update GenerateModule to include partner information in quotation

fix: Refactor GenerateTable to separate sales price calculations for VE and partner

fix: Update ParnerTable to handle partner selection and commission logic

fix: Modify calculateCosts utility to use costPerson for calculations

feat: Enhance ProfilePage with phone number formatting and description field

feat: Add phone number and description fields to EditModalProfile

feat: Extend DataTableQuotation with creation and modification date columns

fix: Update TableActions to include user online status in avatar

feat: Add createdAt and updatedAt filters to QuotesTable and UnofficialDataTable

fix: Update FilterByRepresentative to use Redux state for user data

fix: Adjust quotes table filters to include createdAt and updatedAt fields

fix: Update LoginPage styling for better responsiveness

feat: Connect socket and fetch users in PrivateRoutes

feat: Implement auth socket service for user connection management

--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "start": "pnpm build && vite --host",
     "preview": "vite preview --port 8080"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@reduxjs/toolkit": "^2.3.0",
-    "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
