--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-# VITE_API_URL=https://c24-5-2024-1-g8b-vamosexpeditions-backend.onrender.com
 VITE_MODE=development
-VITE_API_URL=https://c24-5-2024-1-g8b-vamosexpeditions-backend.onrender.com
+VITE_API_URL=http://localhost:8000
 VITE_DB_NAME=vamos_expeditions
 VITE_DB_VERSION=1
