--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "idb": "^8.0.1",
+    "jwt-decode": "^4.0.0",
     "libphonenumber-js": "^1.11.17",
     "luxon": "^3.5.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
     "react": "^18.3.1",
     "react-confetti": "^6.2.2",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
@@ -37,7 +39,7 @@
     "@types/luxon": "^3.4.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-react-swc": "^3.7.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -45,8 +47,8 @@
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.11.0",
+    "typescript": "~5.6.3",
+    "typescript-eslint": "^8.12.2",
     "vite": "^5.4.10"
   }
 }
