--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-confetti": "^6.2.2",
     "react-countdown-circle-timer": "^3.2.1",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
@@ -38,6 +39,7 @@
     "@eslint/js": "^9.13.0",
     "@types/luxon": "^3.4.2",
     "@types/react": "^18.3.12",
+    "@types/react-detect-offline": "^2.4.5",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.7.1",
     "autoprefixer": "^10.4.20",
