--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.2.2",
     "react-countdown-circle-timer": "^3.2.1",
     "react-detect-offline": "^2.4.5",
