--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "idb": "^8.0.1",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "libphonenumber-js": "^1.11.17",
     "luxon": "^3.5.0",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/luxon": "^3.4.2",
     "@types/react": "^18.3.12",
     "@types/react-detect-offline": "^2.4.5",
